--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "start": "node robot-id-extractor.js"
   },
   "dependencies": {
-    "puppeteer": "^22.4.1"
+    "puppeteer": "^22.4.1",
+    "readline-sync": "^1.4.10"
   }
 }
